syntax = "proto3";

package user;

option csharp_namespace = "User";



// Value Object: FullName
message FullName {
  string first_name = 1;
  string last_name = 2;
  string middle_name = 3;
}

// Entity: Teacher
message Teacher {
  // Табельный номер преподавателя
  string personal_number = 1;
  // Пароль
  string password = 2;
  // Value Object: FullName
  FullName full_name = 3;
  
}